--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -109,7 +109,7 @@
                                   </div>
                                 </div>
                                 <div class="pro-action">
-                                  <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
+                                  <button type="button" class="add-to-cart"><span> Thêm giỏ hàng</span> </button>
                                 </div>
                               </div>
                             </div>
@@ -192,7 +192,7 @@
                                   </div>
                                 </div>
                                 <div class="pro-action">
-                                  <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
+                                  <button type="button" class="add-to-cart"><span> Thêm giỏ hàng</span> </button>
                                 </div>
                               </div>
                             </div>
@@ -212,7 +212,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <a href="#" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
+        <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
   </div>
@@ -303,7 +303,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <a href="#" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
+        <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 3}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
   </div>
@@ -400,12 +400,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <a href="#" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
+        <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 4}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
   </div>
   <br>
-
 
   <div class="container">
     <div class="home-tab">
@@ -414,7 +413,6 @@
     </div>
    </div>
     <div class="row">
-
       <div class="col-md-12 col-xs-12">
         <div class="our-clients">
           <div class="slider-items-products">
