--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -2,21 +2,17 @@
 <div class="main-slider" id="home">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-3 col-xs-12 banner-left hidden-xs"><img src="./../assets/images/banner-left.jpg" alt="banner"></div>
-        <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 jtv-slideshow">
+        <!-- <div class="col-md-3 col-sm-3 col-xs-12 banner-left hidden-xs"><img src="./../assets/images/banner-left.jpg" alt="banner"></div> -->
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12 jtv-slideshow">
           <div id="jtv-slideshow">
             <div id='rev_slider_4_wrapper' class='rev_slider_wrapper fullwidthbanner-container' >
               <div id='rev_slider_4' class='rev_slider fullwidthabanner'>
                 <owl-carousel-o [options]="customOptions">
                   <ng-container *ngFor="let slider of sliders;let i = index;">
                     <ng-template carouselSlide [id]=" i.toString()" [width]="slider.width">
-                      <img [src]="urlImg + slider.imageUrl" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="banner"/>
-                      <div class="caption-inner">
-                        <div class='tp-caption LargeTitle sft  tp-resizeme' data-x='250'  data-y='110'  data-endspeed='500'  data-speed='500' data-start='1300' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:3; white-space:nowrap;'>Template for your business</div>
-                        <div class='tp-caption ExtraLargeTitle sft  tp-resizeme' data-x='200'  data-y='160'  data-endspeed='500'  data-speed='500' data-start='1100' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:2; white-space:nowrap; color:#fff; text-shadow:none;'>Easy to modify</div>
-                        <div class='tp-caption' data-x='310'  data-y='230'  data-endspeed='500'  data-speed='500' data-start='1100' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:2; white-space:nowrap; color:#f8f8f8;'>Perfect website solution for your</div>
-                        <div class='tp-caption sfb  tp-resizeme ' data-x='370'  data-y='280'  data-endspeed='500'  data-speed='500' data-start='1500' data-easing='Linear.easeNone' data-splitin='none' data-splitout='none' data-elementdelay='0.1' data-endelementdelay='0.1' style='z-index:4; white-space:nowrap;'><a href='#' class="buy-btn">Get Started</a> </div>
-                      </div>
+                      <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: 'item.productNameSlug'}">
+                        <img style="max-height: 500px;" [src]="urlImg + slider.imageUrl" data-bgposition='left top' data-bgfit='cover' data-bgrepeat='no-repeat' alt="banner"/>
+                      </a>
                     </ng-template>
                   </ng-container>
                   </owl-carousel-o>
