--- a/src/app/product-grid/product-grid.component.css
+++ b/src/app/product-grid/product-grid.component.css
@@ -18,6 +18,14 @@
     /* text-transform: uppercase; */
     letter-spacing: 0.5px;
 }
+.block-filter .filter-header a {
+    font-size: 18px;
+    font-weight: bold;
+    color: blue;
+}
+.block-filter .filter-header i {
+    color: blue;
+}
 .block-filter .filter-body {
     padding: 0 16px;
     max-height: 450px;
@@ -46,9 +54,15 @@
     border: 1px solid #b3b8c2;
     box-sizing: border-box;
     position: relative;
-    
+    vertical-align: middle;
+    display: table-cell;
+    margin-top: 4px !important;
+    margin-bottom: 3px !important;
 }
-
+.block-content{
+    font-size: 14px !important;
+    color: red;
+}
 .filter-item li > label {
     display: flex;
     align-items: center;
