--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -5,19 +5,19 @@
         <div class="cart">
           
           <div class="page-content page-order"><div class="page-title">
-            <h2>Shopping Cart</h2>
+            <h2>Giỏ hàng</h2>
           </div>
             <div class="order-detail-content">
               <div class="table-responsive">
                 <table class="table table-bordered cart_summary">
                   <thead>
                     <tr>
-                      <th class="cart_product">Product</th>
-                      <th>Description</th>
-                      <th>Avail.</th>
-                      <th>Unit price</th>
-                      <th>Qty</th>
-                      <th>Total</th>
+                      <th class="cart_product">Sản phẩm</th>
+                      <th>Mô tả</th>
+                      <th>Tình trạng</th>
+                      <th>Giá</th>
+                      <th>Số lượng</th>
+                      <th>Thành tiền</th>
                       <th  class="action"><i class="fa fa-trash-o"></i></th>
                     </tr>
                   </thead>
@@ -59,17 +59,17 @@
                   <tfoot>
                     <tr>
                       <td colspan="2" rowspan="2"></td>
-                      <td colspan="3">Total products (tax incl.)</td>
+                      <td colspan="3">Tổng sản phẩm</td>
                       <td colspan="2">$237.88 </td>
                     </tr>
                     <tr>
-                      <td colspan="3"><strong>Total</strong></td>
+                      <td colspan="3"><strong>Tổng tiền</strong></td>
                       <td colspan="2"><strong>$237.88 </strong></td>
                     </tr>
                   </tfoot>
                 </table>
               </div>
-              <div class="cart_navigation"> <a class="continue-btn" href="#"><i class="fa fa-arrow-left"> </i>&nbsp; Continue shopping</a> <a class="checkout-btn" href="#"><i class="fa fa-check"></i> Proceed to checkout</a> </div>
+              <div class="cart_navigation"> <a class="continue-btn" routerLink="/"><i class="fa fa-arrow-left"> </i>&nbsp; Tiếp tục mua hàng</a> <a class="checkout-btn" href="#"><i class="fa fa-check"></i> Thanh toán</a> </div>
             </div>
           </div>
         </div>
