--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -5,8 +5,8 @@
       <div class="row">
         <div class="col-xs-12">
           <ul>
-            <li class="home"> <a title="Go to Home Page" href="index.html">Home</a><span>&raquo;</span></li>
-            <li><strong>Wishlist</strong></li>
+            <li class="home"> <a title="Go to Home Page" routerLink="/">Home</a><span>&raquo;</span></li>
+            <li><strong>Yêu thích</strong></li>
           </ul>
         </div>
       </div>
@@ -17,20 +17,20 @@
   <section class="main-container col2-right-layout">
     <div class="main container">
       <div class="row">
-        <div class="col-main col-sm-9 col-xs-12">
+        <div class="col-main col-sm-12 col-xs-12">
           <div class="my-account">
             <div class="page-title">
-              <h2>My Wishlist</h2>
+              <h2>Danh sách yêu thích của tôi</h2>
             </div>
-            <div class="wishlist-item table-responsive">
+            <div style="margin-top: 30px;" class="wishlist-item table-responsive">
               <table class="col-md-12">
                 <thead>
                   <tr>
-                    <th class="th-delate">Remove</th>
-                    <th class="th-product">Images</th>
-                    <th class="th-details">Product Name</th>
-                    <th class="th-price">Unit Price</th>
-                    <th class="th-total th-add-to-cart">Add to Cart </th>
+                    <th class="th-delate">Xóa</th>
+                    <th class="th-product">Hình ảnh</th>
+                    <th class="th-details">Tên sản phẩm</th>
+                    <th class="th-price">Đơn giá</th>
+                    <th class="th-total th-add-to-cart">Thêm giỏ hàng </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -64,10 +64,10 @@
                   </tr>
                 </tbody>
               </table>
-              <a href="checkout.html" class="all-cart">Add all to cart</a> </div>
+              <a href="checkout.html" class="all-cart">Thêm tất cả vào giỏ hàng</a> </div>
           </div>
         </div>
-        <aside class="right sidebar col-sm-3 col-xs-12">
+        <!-- <aside class="right sidebar col-sm-3 col-xs-12">
           <div class="sidebar-account block">
             <div class="sidebar-bar-title">
               <h3>My Account</h3>
@@ -103,7 +103,7 @@
               </div>
             </div>
           </div>
-        </aside>
+        </aside> -->
       </div>
     </div>
   </section>
