--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -99,19 +99,19 @@
               <div class="top-cart-contain">
                 <div class="mini-cart">
                   <div data-toggle="dropdown" data-hover="dropdown" class="basket dropdown-toggle"> <a href="#">
-                    <div class="cart-icon"><i class="icon-basket-loaded icons"></i><span class="cart-total">3</span></div>
+                    <div class="cart-icon"><i class="icon-basket-loaded icons"></i><span class="cart-total">{{sumItemsInCart()}}</span></div>
                     <div class="shoppingcart-inner hidden-xs"><span class="cart-title">Giỏ hàng</span> </div>
                     </a></div>
                   <div>
                     <div class="top-cart-content">
                       <div class="block-subtitle hidden">Recently added items</div>
-                      <ul id="cart-sidebar" class="mini-products-list">
-                        <li class="item odd"> <a [routerLink]="['/gio-hang']" title="Product title here" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="html Template" width="65"></a>
+                      <ul id="cart-sidebar" class="mini-products-list" *ngFor="let item of itemsCart">
+                        <li class="item odd"> <a [routerLink]="['/gio-hang']" title="{{item.productName}}" class="product-image"><img [src]="urlImg + item.image" alt="html Template" width="65"></a>
                           <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
-                            <p class="product-name"><a [routerLink]="['/gio-hang']">Lorem ipsum dolor sit amet Consectetur</a> </p>
-                            <strong>1</strong> x <span class="price">$20.00</span> </div>
+                            <p class="product-name"><a [routerLink]="['/gio-hang']">{{item.productName}}</a> </p>
+                            <strong>{{item.quantity}}</strong> x <span class="price">{{item.price | currency:"VND"}}</span> </div>
                         </li>
-                        <li class="item even"> <a [routerLink]="['/gio-hang']" title="Product title here" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="html Template" width="65"></a>
+                        <!-- <li class="item even"> <a [routerLink]="['/gio-hang']" title="Product title here" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="html Template" width="65"></a>
                           <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
                             <p class="product-name"><a [routerLink]="['/gio-hang']">Consectetur utes anet adipisicing elit</a> </p>
                             <strong>1</strong> x <span class="price">$230.00</span> </div>
@@ -120,9 +120,9 @@
                           <div class="product-details"> <a href="#" title="Remove This Item" class="remove-cart"><i class="pe-7s-trash"></i></a>
                             <p class="product-name"><a [routerLink]="['/gio-hang']">Sed do eiusmod tempor incidist</a> </p>
                             <strong>2</strong> x <span class="price">$420.00</span> </div>
-                        </li>
+                        </li> -->
                       </ul>
-                      <div class="top-subtotal">Tổng tiền: <span class="price">$520.00</span></div>
+                      <div class="top-subtotal">Tổng tiền: <span class="price">{{sumPriceItemsInCart() | currency : "VND"}}</span></div>
                       <div class="actions">
                         <button class="btn-checkout" type="button" [routerLink]="['/thanh-toan']"><i class="fa fa-check"></i><span>Thanh toán</span></button>
                         <button class="view-cart" type="button" [routerLink]="['/gio-hang']"><i class="fa fa-shopping-cart"></i><span>Giỏ hàng</span></button>
