--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -192,7 +192,7 @@
                                   </div>
                                 </div>
                                 <div class="pro-action">
-                                  <button type="button" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
+                                  <button type="button" (click)="addToShopingCard(item)" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
                                 </div>
                               </div>
                             </div>
@@ -283,7 +283,7 @@
                                   </div>
                                 </div>
                                 <div class="pro-action">
-                                  <button type="button" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
+                                  <button type="button" (click)="addToShopingCard(item)" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
                                 </div>
                               </div>
                             </div>
@@ -380,7 +380,7 @@
                                   </div>
                                 </div>
                                 <div class="pro-action">
-                                  <button type="button" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
+                                  <button type="button" (click)="addToShopingCard(item)" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
                                 </div>
                               </div>
                             </div>
