--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -22,18 +22,18 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="cart_product"><a href="#"><img src="./../assets/images/products/product-1.jpg" alt="Product"></a></td>
-                      <td class="cart_description"><p class="product-name"><a href="#">Ipsums Dolors Untra </a></p>
-                        <small><a href="#">Color : Red</a></small>
-                        <small><a href="#">Size : M</a></small></td>
+                    <tr *ngFor="let item of itemsCart">
+                      <td class="cart_product"><a [routerLink]="['/chi-tiet']" (click)="handleViewDetailProduct($event,item)"><img [src]="urlImg + item.image" alt="Product"></a></td>
+                      <td class="cart_description"><p class="product-name"><a href="#">{{item.productName}}</a></p>
+                        <!-- <small><a href="#">Color : Red</a></small>
+                        <small><a href="#">Size : M</a></small></td> -->
                       <td class="availability in-stock"><span class="label">In stock</span></td>
-                      <td class="price"><span>$49.88</span></td>
-                      <td class="qty"><input class="form-control input-sm" type="text" value="1"></td>
-                      <td class="price"><span>$49.88</span></td>
+                      <td class="price"><span>{{item.price | currency:"VND"}}</span></td>
+                      <td class="qty"><input class="form-control input-sm" type="text" value="{{item.quantity}}"></td>
+                      <td class="price"><span>{{item.price * item.quantity | currency:"VND"}}</span></td>
                       <td class="action"><a href="#"><i class="icon-close"></i></a></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                       <td class="cart_product"><a href="#"><img src="./../assets/images/products/product-1.jpg" alt="Product"></a></td>
                       <td class="cart_description"><p class="product-name"><a href="#">Ipsums Dolors Untra </a></p>
                         <small><a href="#">Color : Green</a></small>
@@ -54,17 +54,17 @@
                       <td class="qty"><input class="form-control input-sm" type="text" value="2"></td>
                       <td class="price"><span>$188.00</span></td>
                       <td class="action"><a href="#"><i class="icon-close"></i></a></td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                   <tfoot>
                     <tr>
                       <td colspan="2" rowspan="2"></td>
                       <td colspan="3">Tổng sản phẩm</td>
-                      <td colspan="2">$237.88 </td>
+                      <td colspan="2">{{sumItemsInCart()}}</td>
                     </tr>
                     <tr>
                       <td colspan="3"><strong>Tổng tiền</strong></td>
-                      <td colspan="2"><strong>$237.88 </strong></td>
+                      <td colspan="2"><strong>{{sumPriceItemsInCart() | currency:"VND"}}</strong></td>
                     </tr>
                   </tfoot>
                 </table>
